--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
             <h2 class="about__text-h2 text-h2">Наши самые большие проекты</h2>
             <div class="about__flex">
                 <div class="about__flex-item">
-                    <img src="/img/about-example.jpg" alt="Пример изображения" class="about__img">
+                    <img src="img/about-example.jpg" alt="Пример изображения" class="about__img">
                     <div class="rectangle"></div>
                     <h3 class="about__text-h3 text-h3">Газпром Арена</h3>
                     <p class="about__text-p text-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас
                         прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному событию.</p>
                 </div>
                 <div class="about__flex-item">
-                    <img src="/img/about-example.jpg" alt="Пример изображения" class="about__img">
+                    <img src="img/about-example.jpg" alt="Пример изображения" class="about__img">
                     <div class="rectangle"></div>
                     <h3 class="about__text-h3 text-h3">Газпром Арена</h3>
                     <p class="about__text-p text-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас
                         прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному событию.</p>
                 </div>
                 <div class="about__flex-item">
-                    <img src="/img/about-example.jpg" alt="Пример изображения" class="about__img">
+                    <img src="img/about-example.jpg" alt="Пример изображения" class="about__img">
                     <div class="rectangle"></div>
                     <h3 class="about__text-h3 text-h3">Газпром Арена</h3>
                     <p class="about__text-p text-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас
