--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Строительная компания</title>
 </head>
 
 <body>
+    <!-- На случай необходимости добавления дополнительных страниц -->
     <ul id="slide-out" class="sidenav">
         <li><a href="#!"><i class="material-icons">home</i>Главная</a></li>
         <li><a href="#!"><i class="material-icons">people</i>О нас</a></li>
         <li><a href="#!"><i class="material-icons">grade</i>Услуги</a></li>
         <li><a href="#!"><i class="material-icons">phone</i>Контакты</a></li>
         <div class="divider"></div>
-        <!-- <li><a href="#!"><i class="material-icons sidenav-close">close</i>Закрыть</a></li> -->
     </ul>
 
     <header class="header">
