Убрал Бургер за ненадобностью

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
 <body>
     <!-- На случай необходимости добавления дополнительных страниц -->
-    <ul id="slide-out" class="sidenav">
+    <!-- <ul id="slide-out" class="sidenav">
         <li><a href="#!"><i class="material-icons">home</i>Главная</a></li>
         <li><a href="#!"><i class="material-icons">people</i>О нас</a></li>
         <li><a href="#!"><i class="material-icons">grade</i>Услуги</a></li>
         <li><a href="#!"><i class="material-icons">phone</i>Контакты</a></li>
         <div class="divider"></div>
-    </ul>
+    </ul> -->
 
     <header class="header">
         <div class="container">
             <div class="header__title">
                 <img src="img/logo.svg" alt="logo" class="header__title-logo">
-                <a class="burger sidenav-trigger" data-target="slide-out">
+                <!-- <a class="burger sidenav-trigger" data-target="slide-out">
                     <span class="header__burger-line"></span>
                     <span class="header__burger-line"></span>
                     <span class="header__burger-line"></span>
-                </a>
+                </a> -->
             </div>
             <h1 class="header__text_title-large">Реализуем крупнейшие проекты в россии</h1>
             <h4 class="header__text_title-min">Стадионы, газопроводы, мосты, дамбы</h4>
