--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
 <body>
     <!-- На случай необходимости добавления дополнительных страниц -->
-    <!-- <ul id="slide-out" class="sidenav">
-        <li><a href="#!"><i class="material-icons">home</i>Главная</a></li>
-        <li><a href="#!"><i class="material-icons">people</i>О нас</a></li>
-        <li><a href="#!"><i class="material-icons">grade</i>Услуги</a></li>
-        <li><a href="#!"><i class="material-icons">phone</i>Контакты</a></li>
+    <ul id="slide-out" class="sidenav">
+        <li><a href="#header"><i class="material-icons">home</i>Главная</a></li>
+        <li><a href="#about"><i class="material-icons">people</i>О нас</a></li>
+        <li><a href="#services"><i class="material-icons">grade</i>Услуги</a></li>
+        <li><a href="#constacts"><i class="material-icons">phone</i>Контакты</a></li>
         <div class="divider"></div>
-    </ul> -->
+    </ul>
 
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__title">
                 <img src="img/logo.svg" alt="logo" class="header__title-logo">
-                <!-- <a class="burger sidenav-trigger" data-target="slide-out">
+                <a class="burger sidenav-trigger" data-target="slide-out">
                     <span class="header__burger-line"></span>
                     <span class="header__burger-line"></span>
                     <span class="header__burger-line"></span>
-                </a> -->
+                </a>
             </div>
             <h1 class="header__text_title-large">Реализуем крупнейшие проекты в россии</h1>
             <h4 class="header__text_title-min">Стадионы, газопроводы, мосты, дамбы</h4>
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="about__info">
             <div class="container">
                 <div class="about__grid">
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <section class="request">
+    <section class="request" id="request">
         <div class="container">
             <div class="request__flex">
                 <div class="request__flex-item">
@@ -125,7 +125,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <h2 class="text-h2 section__h2">Чем мы занимаеся?</h2>
             <div class="services__grid">
@@ -156,7 +156,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="portfolio__grid">
             <div class="portfolio__grid-item">
                 <img src="img/portfolio__img.jpg" alt="portfolio item" class="portfolio__img materialboxed">
@@ -184,7 +184,7 @@
             </div>
         </div>
     </section>
-    <section class="question">
+    <section class="question" id="question">
         <div class="container">
             <h2 class="text-h2 section__h2">Ответы на вопросы</h2>
             <div class="question__items">
@@ -220,7 +220,7 @@
             </div>
         </div>
     </section>
-    <section class="partners">
+    <section class="partners" id="partners">
         <div class="container">
             <h2 class="text-h2 partners-h2"> Наши партнеры</h2>
             <div class="partners__flex">
@@ -242,7 +242,7 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section class="reviews" id="reviews">
         <div class="container">
             <h2 class="text-h2 reviews__h2">Отзывы о работе с нами</h2>
             <div class="reviews__grid">
@@ -288,7 +288,7 @@
         </div>
     </div>
 
-    <section class="request">
+    <section class="request" id="request">
         <div class="container">
             <div class="request__flex">
                 <div class="request__flex-item">
@@ -306,7 +306,7 @@
             </div>
         </div>
     </section>
-    <section class="constacts">
+    <section class="constacts" id="constacts">
         <div class="container">
             <h2 class="text-h2 contacts__h2">Контакты</h2>
             <div class="constacts-grid">
@@ -336,7 +336,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer-flex">
                 <p class="text-p footer__copyright">&copy; 2019 Строительная компания</p>
